--- a/tex-for-print/001-070/001-070.tex
+++ b/tex-for-print/001-070/001-070.tex
@@ -6102,12 +6102,14 @@ avAgajxM parxNavasAyxgarxM yasatxM veVda sa veVdavitf ||
 \begin{entry}
 \word{avAcayxparxNama}
 \src{koV}
-\meaning{\arthanonum{(= avAgajxparxNama)} \ullekha{avAcayx parxNamada nenahu mAtarxdalilx kalAparxNavada utapxtitxyu avAcayxparxNamada\break nenahiniMda cinAnxda, cidibxMdu, citakxlegaLu udayavAgutatxve (shivAkoV. 99-185).}}
+\meaning{\arthanonum{= avAgajxparxNama} \ullekha{avAcayx parxNamada nenahu mAtarxdalilx kalAparxNavada utapxtitxyu avAcayxparxNamada\break nenahiniMda cinAnxda, cidibxMdu, citakxlegaLu udayavAgutatxve (shivAkoV. 99-185).}}
+\newmeaning{\ni{avAcayx parxNama-avAcayx parxNamaH na vakutxM yoVgayxH avAcayxH athavA vakutxM yoVgayxH vAcayxH, na vAcayxH avAcayxH avAcayxshacx asw parxNamashacx-avAcayxparxNamaH}}
 \end{entry}
 
 \begin{entry}
 \word{avAcayxparxNava}
 \meaning{\arthanonum{(= avAgajxparxNama)} \ullekha{AdiyeMba\break yugadalilx AdikAyaneMba oDaluviDidu avAcayxparxNavava dhAyxnisutideRnu (savasaM. 13; bAlasaM. 315-129); aMtavAcayxparxNavavesevudada\char'273\char'304nanxtikeyeMtenalu veVdAdi mUlasavxraMgaLige tAM taLutx kiVtiRvetitxhudu (viVsheYpu. 1-5-20).}}
+\newmeaning{\ni{avAcayx parxNava-avAcayx parxNavaH avAcayxshacx asw parxNavashacx-avAcayx parxNavaH}}
 \end{entry}
 
 %\begin{entry}
@@ -6271,6 +6273,7 @@ soV{\char'263}vidoyxVpAdhikoV BUtAvx BavatayxMgasavxrUpavAnf ||
 \begin{entry}
 \word{ashudadhx}
 \meaning{\artha{apavitarxnAdavanu.} \ullekha{kANabahude paruSada giri aMdha\-kaMge?... kareyabahude kAmadheVnu ashudadhxMge? (savasaM. 1; basava. 268-66)}; \artha{eraDu bageya saqSiTxgaLalilx oMdu.} \ullekha{saqSiTx shudadhx matutx ashudadhxveMdu eraDu parxkAra (hiMdasA. 296).}}
+\newmeaning{\ni{ashudadhx-na shudadhxH-ashudadhxH}}
 \end{entry}
 
 %\begin{entry}
