--- a/tex-for-print/071-150/071-150.tex
+++ b/tex-for-print/071-150/071-150.tex
@@ -11,6 +11,7 @@ EvamakASXkalAshecxYva sadoyxVjAteV parxkiVtiRtAH ||
 \newmeaning{\arthanonum{\SEE{aSaTxtirxMshatf kalegaLu}}}
 \end{entry}
 
+
 \begin{entry}
 \word{aSaTxkAmavikAra}
 \src{va}
@@ -122,7 +123,9 @@ liMganiSeThxyU vaqdidhxsutatxde.}}
 
 \begin{entry}
 \word{aSaTxtanumada}
-\meaning{\SEE{aSaTxtanumUtiRmada.} \ullekha{paqthivx salila pAvaka pavana aMbara ravi shashi AtamxveMba aSaTxtanumadaMgaLa BeVdABeVdaMgaLa BeVdisi (savasaM. 3; cenanxba. 977-316).}}
+\meaning{= aSaTxtanumUtiRmada.}
+\newmeaning{\ullekha{paqthivx salila pAvaka pavana aMbara ravi shashi AtamxveMba aSaTxtanumadaMgaLa BeVdABeVdaMgaLa BeVdisi (savasaM. 3; cenanxba. 977-316).}}
+\newmeaning{\ni{aSaTxtanumada-aSaTxtanumadaH aSATxnAM tanUnAM madaH-aSaTxtanumadaH}}
 \end{entry}
 
 \begin{entry}
@@ -350,6 +353,7 @@ parxkaqtAyxdayxSaTxbaMdheVna nimuRkotxV mukatx ucayxteV |
 \src{va}
 \meaning{\arthanonum{joyxVtisavxrUpanAda parashiva :}
 \ullekha{aSaTxma\-barxhamxkekx paTaTxgaTiTxVtu mAte hetutx hesariTiTxteY akaSxrAMka Aruvanu aiduvanu meVlapapx mUruvanu kUDe hadinAlakxroLu loVkavAge (savasaM. 4; sidadhxrA. 126-39).}}
+\newmeaning{\ni{aSaTxmabarxhamx-aSaTxmabarxhAmx aSaTxmashAcx asw barxhAmx ca-aSaTxmabarxhAmx}}
 \end{entry}
 
 \begin{entry}
@@ -938,6 +942,7 @@ nivAraNeYkakAyARNi KAyxtAnAyxvaraNAKayxyA ||
 \pauthor{(caM. A., kirx.pA. 2. 2-3)}
 \newmeaning{\ullekha{shivakuladalilx huTiTx shivasaMsAkxra hoMdi sadugxruviniMda liMga\-sAmarasayx paDedu aSATxvaraNave aMga paMcAcArave pArxNavAgi\break naDedu kaDege cirasuKiyAgutipaRnu noVDA (savasaM. 3;\break cenanxba. 1668-612); aMgakekx aMdavAvudeMdare ...aSATx\-varaNadalilx nibebx\char'273giniMda kUDi BakitxyeMba samudarxdalilx IsADu\-vude ceMda (savasaM. 6; aMbiga. 14-7); ayayx ninanx\break aSaTxtanuvina madhayxdalilx A parabarxhamxnijavasutxve ninanx pAvana\break nimitAyxthaRvAgi aSATxvaraNa savxrUpiniMda neredipuRdu noVDA (savasaM. 10; gurusi. 711-400); aSATxvaraNa sulaBa mAnava\-janamx huTiTx baruvadu dulaRBa (kaDasavx. 4-1-3).}}
 \newmeaning{\arthanonum{\SEE{AvaraNagaLu}}}
+\newmeaning{\ni{aSATxvaraNa shakitxveYshiSaTxyX-aSATxvaraNa shakitxveYshiSaTxyXM aSATxvaraNAnAM shakitxH-aSATxvaraNashakitxH, tasAyxH aSATxvaraNashaketxVH veYshiSaTxyXM-aSATxvaraNashakitxveYshiSaTxyXM}}
 \end{entry}
 
 \begin{entry}
@@ -1699,6 +1704,7 @@ nidiRSaTxmutatxreV BAgeV viVrasheYvamataM paramf ||
 \src{va}
 \meaning{\arthanonum{AgamagaLa adhayxyanadiMda parashivananunx tiLiyabahudeMdu BarxmitarAdavanu.}
 \ullekha{AgamapuruSarirA, nimamx AgamavAyavAgi hoVyitatxlAlx. vidAyxpuruSarirA nimamx videyx avideyxyAgi hoVdalilx, barumuKarAgi ididxralAlx. (savasaM. 2; alalxma, 113-37).}}
+\newmeaning{\ni{Agama-AgamaH A samaMtAtf gamayati iti AgamaH}}
 \end{entry}
 
 \begin{entry}
@@ -2738,6 +2744,7 @@ itAyxjAcnxdiVkaSxyAdishayx tatasetxvXVvaM vadeVdugxruH ||
 \medskip
 \pauthor{(kA.A., kirx.pA., 1.44; caM.A., kirx.pA., 9. 18)}
 \newmeaning{\ullekha{ayayx! muMde matayxRloVkada mahAgaNaMgaLu sadaBxkitx,\break sadAcAra, satikxrXyA, samayxgfjAcnxna, AjAcnxdiVkeSx modalAda\break ipapxtotxMdu diVkeSxya vicAra. (savasaM. 2; alalxma. 802-233); AjAcnxdiVkeSx upamAdiVkeSx liMgAyita liMgasAvxyata I ELanu kAyakukxpadeVshava mADuvudu (savasaM. 3; cenanxba. 973-315); saMdu saveyitutx, haMgu ha\char'273\char'236yitutx AjAcnx\-diVkeSx parxbalavAyitutx (savasaM. 4; sidadhxrA 754-214); matatxmA ciraMnivARNadiVkeSxyu, AjAcnxdiVkeSxyu, upamA\-diVkeSx savxsivxkAroVhaNa, viBUtiya paTaTx. (savasaM. 9; shAMta. 1378-519); viVrasheYvadiVkeSxyAdoDe AjAcnx\-diVkeSx ...liMgasAvxyatameMba sapatxvidhamAgihudava\char'273lilx shirxVguru tanAnxjecnxyaneV parxtipAdisuvudeV AjAcnxdiVkeSxyenisuvudu (viveVka. 102).}}
+\newmeaning{\ni{AjAcnxdiVkASx-AjAcnx iti diVkASx-AjAcnx diVkASx athavA AjAcnxparxdhAnA diVkASx}}
 \end{entry}
 
 %\begin{entry}
@@ -2756,6 +2763,7 @@ itAyxjAcnxdiVkaSxyAdishayx tatasetxvXVvaM vadeVdugxruH ||
 \begin{entry}
 \word{ANava}
 \meaning{\artha{ANava, mAyika matutx kAmiRka eMba tirxvidha malagaLalilx oMdu; jiVvanalilx aNutavxBAvaneyanunx uMTAgisuva mAye:} \ullekha{tA mADideneMdaDe tananx keLagaNave, ANava mAyika kAmiRka koDeneMdu, manakekx toV\char'273\char'311daDe tananx, keLagaNa beVDugave I mUru (savasaM. 8; moVLimA. 1814-592).} \artha{ANava, mAyika, kAmiRka, mAhAmAye matutx tiroVdhAna eMba paMcamalagaLalilx oMdu; Atamxnu tananx hiMdina avasethxyanunx mareyuvaMte mADalu Avarisuva ajAcnxna :} \ullekha{inAnxtumananAdi paMcamala visAtxra sanunxtANava mAye kAmiRka mahAmAyeyunanxta tiroVdhAnaviMteYdumalavANavaM tAnadeMteMdoDe munAnxtamx - boVdhakekxyoMdanuM tiLiyadavolunAnxDema\char'273\char'311sikoMDihudanAdiyavasethxganinxjava ma\char'273hisa\char'273\char'304hisuva veVLeyoLagajAcnxnamaM beLesi niluguM (viVsheYpu. 7-96-29).}}
+\newmeaning{\ni{ANava-ANavaM aNoVH idaM athavA saMbaMdhi-ANavaM}}
 \end{entry}
 
 \begin{entry}
@@ -2841,7 +2849,7 @@ ashanxnf kamaRPalaM savaRmAtAmx suPxrati diVpavatf ||
 \medskip
 \pauthor{(si.shi., 18. 5-6)}
 \newmeaning{\ullekha{Atamxnalilx parxNavapaMcAkaSxriya niruvisi, sadugxruve enanx shivAtamxna mADidi\-rAgi, AtamxshudidhxyAyitetxnage. (savasaM. 3; cenanxba. 975-315); aMgakokxMdu suguNa duguRNa soVMkuvalilx soVMkida kale aMgakokxV AtamxMgoV? (savasaM. 6; aMgasoVM. 1-1).}}
-\newmeaning{\ni{AtAmx - atati iti AtAmx}}
+\newmeaning{\ni{Atamx-AtAmx atati iti-AtAmx}}
 \end{entry}
 
 \begin{entry}
@@ -2953,6 +2961,7 @@ shudAdhxdi AtamxpayaRMtaM sithxtimAgeRVNa coVdadhxreVtf |
 \medskip
 \pauthor{(vA.shu.A., 5. 19-20; 45-50)}
 \newmeaning{\ullekha{BUtAMta saMjecnxyanuLaLx `hf' eMbakakxrakakxdeV parxkaqti saMjecnxyanunxLaLx\break AkAramaM patitxse `ha' eMbudAyutx maginxmaMDalada sAtivxkavagaRdiMdarxdaLada `sf' eMba vayxMjanakAkxdiparxkaqtiyaM\break kUDise `sa' enisaloDinanxvara madhayxdoLashxkitxsaMjicnxtamAda sonenx\-yanudadhxrise haMsa eMdAyatxde AtamxpArxsAdavenisitutx. (savasaM. 11; shUnayxmaM. 1328-612);  sonenx\-yanudadhxrise `haMsa' eMdAyatxde AtamxpArxsAdavenisitatxde savaRra haqdagxtavAgi jiVvaparxsAdavAdudeMdu tiLipideyayAyx. (savasaM. 11; imamxDi. 1328-612).}}
+\newmeaning{\ni{AtamxparxsAda- AtamxnaH parxsAdaH - AtamxparxsAda}}
 \end{entry}
 
 \begin{entry}
@@ -3130,6 +3139,7 @@ guroVshacx boVdhayoVgeVna tadAtAmx{\char'263}yaM parxkiVtiRtaH ||
 \meaning{\artha{hiriyaru; pUviRkaru;}
 \ullekha{Adayxra vacana AdayxrigAyitutx, veVdayxrigalalxde sAdhayxvAgadu. (savasaM. 1; basava. 843-216); muninxva Adayxra vacana A liMgada naDe A liMgada nuDi A liMgadaMte (savasaM. 3; cenanxba. 344-114); Adayxra vacanaMgaLaduRda kANalariyade nA BavaveMdu agamayxva biVruva virakatxreMbeneV ajAcnxnigaLa anuBAvigaLeMbene. (savasaM. 5; amuge. 648-115).}
 \artha{hiriya sharaNaru} \artha{hiriya vachanakAraru.}}
+\newmeaning{\ni{Adayx-AdayxH adw BavaH- AdayxH}}
 \end{entry}
 
 %\begin{entry}
@@ -3439,6 +3449,7 @@ enanx AdipiMDakekx niVne AdhAravAgi toVridaDe [enanx] haqdaya\-kamaladalilx nima
  shariVravelalx satxMBadaMtide. bahushaH UdhayxhavxRliMgavu,
  `AdimadhAyxMtarahita' shivana parxtiVkaveMdu kANuvaMtide.}
 \ullekha{Ganakekx Gana mahAGana. AdimadhAyxMtarahitavAda niraM\-janakekx kuruhilalx. kuruhilAlxgi marahilalx. (savasaM. 6; Adayayx.\break 917-277); guruve AdimadhAyxMtarahitanayayx. guruve\break mAyA\-rahitanayayx. (savasaM. 10; gurusi. 668-364); inunx liMgoVtapxtayxvadeMteMdaDe... AdimadhAyxMtarahitaM aparxmeVyaM anAmayaM. (savasaM. 13; bAlasaM. 236-83); nAdapirxya nAgeVshavxra AdimadhAyxMtarahita deVvaM veVdavidavaraM voyxVmajoyxVtirUpakaM eMdenisuva deVvaneMdu morehokekx. (savasaM. 14; heVmaga. 980-455).}}
+\newmeaning{\ni{AdimadhAyxMtarahita- AdimadhAyxMtarahitaH Adishacx madhayxM ca aMtaM ca-AdimadhAyxMtAni, teYH- AdimadhAyxMteYH rahitaH- AdimadhAyxMtarahitaH}}
 \end{entry}
 
 \begin{entry}
@@ -3446,6 +3457,7 @@ enanx AdipiMDakekx niVne AdhAravAgi toVridaDe [enanx] haqdaya\-kamaladalilx nima
 \src{va}
 \meaning{\arthanonum{sAmAnayxvAgi Adi, madhayx matutx\break avasAna eMba padagaLu karxmavAgi parxpaMcada Adi (saqSiTx),\break parxpaMcada madhayx (sithxti) matutx parxpaMcada avasAna (laya)gaLige anavxyisutatxde. vacanakArara parxkAra parxpaMcada Adi madhAyxva\-sAnagaLu shivana niyaMtarxNadalilxve. matotxMdu visheV\-SAthaRdalilx sidadhxrAmanu AdiyeMdare Bakatxnu liMgadiVkeSxya mUlaka guru karasaMjAtanAguvudeMdU, madhayxveMdare A\break Bakatxnu jaMgamaroDane sahacarisuvudeMdU, avasAna\-veMdare liMgadalilx aikayxvAguvudeMdU heVLutAtxne.}
 \ullekha{amUlayxna\-parxmANanagoVcaraliMga, AdimadhAyxvasAnagaLilalxda savxtaMtarxliMga,\break nitayxnimaRLaliMga, ayoVnisaMBava namamx kUDalasaMgama\-deVvaru. (savasaM. 1; basava. 982-264); tanUdavxhana\-shakitxyanaridalalxde, Adi\-madhAyxva\-sAnavanariyabAradu. Adi\-madhAyxva\-sAnavanaridalalxde, piMDabarxhAmxMDavanariyabAradu. (savasaM. 3; cenanxba. 1117-379); AdimadhAyxvasAnaMgaLilalxda savxtaMtarxmahimanu, veVdaviMtuMTeMdu rUhisabAradavanu, nA balelxneMba hiriyara bagegxgU mikikxpapx uriliMgapedidxpirxya vishevxVshavxra.\break (savasaM. 6; uriliM. 1396-476); shivatatatxvXda AdimadhAyxva\-sAnavanariyade BakatxreMtapipxriyayayx? shivatatatxvXdAdiyeV maheV\-shavxra. (savasaM. 11; toVMTasi. 313-148).}}
+\newmeaning{\ni{AdimadhAyxvasAna- AdimadhAyxvasAnaM Adishacx madhayxMca avasAnaM ca- EteVSAM samAhAraH- AdimadhAyxvasAnaM}}
 \end{entry}
 
 \begin{entry}
@@ -4186,6 +4198,7 @@ tayxkAtxvX saMkalapxmAterxVNa kAruNAyxnAM vidhiVyateV |
 \begin{entry}
 \word{ArUDhi}
 \meaning{\arthanonum{(= ArUDha-2)} \ullekha{enanx ajagaNaNxneMba guruvilalxde ArUDhiya kUTa samanisadu keVLA (savasaM. 5; mukAtxya. 1111-329).}}
+\newmeaning{\ni{ArUDhi-ArUDhiH (sitxrXV) A+ruhf-i}}
 \end{entry}
 
 \begin{entry}
@@ -4594,6 +4607,7 @@ vayxkatxM hayxhaMkaqtipadeV shivaliMgamAhuH ||
 \src{va}
 \meaning{\arthanonum{iDA nADiyu namamx benunxhuriyalilx ideyeMdu naMbalAgide. Adare, idu iMdirxyagoVcaravalalx. idu namamx shariVrada eDaBAgavanunx parxtinidhisutatxde. iDA nADiyu namamx jAcnxneVM\-dirxyagaLanUnx, manasusx, budidhx, citatx matutx ahaMkAragaLanUnx niyaMtirxsutatxde. idanenxV `budidhx' athavA `manasusx' eMdare tapApxgalAradu. manuSayx aMtamuRKiyAgalu iDA muKayx kAraNa. kelavu veVLe idanunx caMdarxnADiyeMdU kareyuvuduMTu. eDa hoLeLxya mUlaka usirADuvudariMda iDA hecucx kAyaRparxvaqtatxvAgutatxde. (va.pa.koV.4-7)}
 \ullekha{caMdarxshileyalilx pAvaka huTiTx, iDApiMgaLa madhayxdalilx anila tuMbi, aridaridu! nimamx neneva parikara hosatu. (savasaM. 1; basava. 1185-325); Adi anAdigaLilalxdaMdina kUgu; nAda biMdugaLilalxdaMdina kUga kaMDu kUgide! iDA piMgaLa suSumanxnALamadhayxda kUga kaMDu kUgide. guheVshavxraneMba talevolana\break dAMTi alalxma kUgida kUgu. (savasaM. 2; alalxma. 877-258); doDaDxveraDu kaMbada madhayxdalilx cikakxveraDu kaMba. iMtiV nAlakxra madhayxda manege asithxyagaLu, narada kaTuTx, majejxya sAra, mAMsada goVDe, camaRda hodike, shorxVNitada sArada, kuMBadiMdipupxdoMdu citarxda mane noVDayAyx. A manegoMbatutx bAgilu, iDA piMgaLaveMba gALiya bAdaLa, maqdu kaThiNaveMbaveraDu aguLiya BeVda noVDA, itatxleya meVlipapx suSumAnxnALava mucicx, divArAtirxyeMba aruhu marahina uBayava kada kitutx noVDayAyx. (savasaM. 6; okakxli. 1737-658).}}
+\newmeaning{\ni{iDA-iliti iDi ilA-lAkakxsa Datavx-iDA}}
 \end{entry}
 
 \begin{entry}
@@ -5203,6 +5217,7 @@ Eke huTiTxside ihaloVkaduHKiya (savasaM. 1; basava. 64-19); Bakatxna tanuve shiv
 \meaning{\arthanonum{(noVDi. IDAnALa)} \artha{IDe.} \ullekha{IDe piMgaLa suSumAnxnADigaLalilx Atamxnu saMcarisabAradeMba yoVgAMgada aNaNxgaLu niVvu keVLirayAyx (gaNaBA. 131-26).} \artha{IDa:}
 \ullekha{IDa piMgaLa vara suSumAnxnADigaLu balidu ...basavanoDiDxdanaMbarAsanava (parxBuliV. 21-16); IDa piMgaLadaMtaradoLu nalaviM taLutx paMcatatatxvXdoLageYdeV GaLige muMce naDeyalu nU\char'273yipapxtutx varuSa badukuvanu. (viVsheYpu. 4-70-9).} \artha{ILa:} \ullekha{ILamuM BAsurada piMgaLa\-doLidaR vAyuva kaTiTxyoVsarisadipapx padAmxsanadoLeyedx kuLiLxduR. (viVsheYpu. 4-52-44).} \artha{IDA.}
 \ullekha{caMdarxshileyalilx pAvaka huTiTx, IDA piMgaLa madhayxdalilx anila tuMbi aridari. (savasaM. 3; cenanxba. 1206-417); IDA piMgaLa nALamaM kaTiTx, suSamanxnALavaM etitx, mana pavana biMdu oDagUDi, caMdarx sUyaR shiKiyaraM mupupxriya mADi, oDagUDi EkavAgi hurigUDi, matayxRloVkava biTuTx, deVvaloVkava meTiTxniMdu, BAva baya\-lAgi, bayake savedu, inunx I loVkadoLage baMdu badukideneMbudanakekx heVya huTiTx, idAvudanU olalxdipaRru, basavapirxya kUDalacenanxbasavaNANx. (savasaM. 9; haDaa. 902-277).}}
+\newmeaning{\ni{IDa, IDA, IDa, ILa-IDA (La-Da) IDf+A}}
 \end{entry}
 
 \begin{entry}
@@ -5753,7 +5768,7 @@ saMpArxpotxV yasatxsayx BaveVdavasAthx soVnamxniV hi yA ||
 \smallskip
 %aihika vasutxgaLa kaDege tirugida manasusx adhoVmuKiyAdare, parashivana kaDege tirugida manasusx unamxni (meVlumxKavAda manasusx). barxhamxraMdharxvanunx noVDutitxruva manasusx, eMbudu matotxMdu athaR. Adare barxhamxraMdharxdalilx parashivanidAdxneMdu naMbuvavarige meVlumxKavAda manasusx parashivana kaDegide eMdarU oMdeV, barxhamxraMdharxda kaDege keVMdirxVkariside eMdarU oMdeV.}
 \newmeaning{\ullekha{basavaNaNxnagaLa muKa BUmadhayx uanamxni utatxmAMga pariyaMtaravu jaMgama savxrUpadoTiTxla kaMdanayAyx (savasaM. 2; alalxya. 1392-414); pUvaRdAvxrava biTuTx pashicxmadAvxradalilx pArxNanirava mADi, nABimuKadaginxyanUdhavxRmuKakokxyudx, shaMkiniya noVTadalilx nilayavAdAta sharaNa. AtaneV tUyARtiVta unamx\-niya\-vasethxyAdAta (savasaM. 3; cenanxba. 1349-476); BakitxyeMba paqthivxyalilx gurUpadeVshaveMba neVgilaM piDidu... unamxniyeMba teneyananxridu, manoVrathaveMba baMDiyalilx heVri. (savasaM. 6; okakxli. 1741-660); padamxpiVThava balidu ...unamxniya sAthxnada padamxliMgAcaRnege paramayoVgi ...meYma\char'273\char'304\char'311du liMga saMgave saMgiyAda sharaNa (padagoV. {\rm ii} -2).} \artha{yoVgada mUru bageya avasethxgaLalilx oMdu.} \ullekha{unamxni manoVnamxni sahajAdhayxvasAthx karxmaMgaLuM (viveVka. 135); pUraka reVcaka kuMBakavane balidu miVrida unamxniya seVrideno (kUDasavx. 2-4).}}
-%\newmeaning{\ni{utf+manasf-(ikArAMta)}}
+\newmeaning{\ni{unamxniV-utf+manasf (i kArAMta)}}
 \end{entry}
 
 \begin{entry}
@@ -6041,6 +6056,7 @@ tirxvadanashacx veVdAreVH saMBUtAshocxVpapaMcamAH ||
 \end{shl}
 \medskip
 \pauthor{(sAvxyaMBuvAgama, ulelxVKa : viV. sa.saM., 5. 43 - 44)}
+\newmeaning{\ni{upapaMcama-upapaMcamaM paMcamasayx samiVpaM - upapaMcama}}
 \end{entry}
 
 \begin{entry}
@@ -6334,6 +6350,7 @@ tadupAdhikamitAyxhuH BasamxtaMtarxvishAradAH ||
 \src{va}
 \meaning{\arthanonum{shariVrada caTuvaTikegaLige ceYtanayxdAyakavAda parxsAda:}
 \ullekha{tanu BoVgisuvudu upAdhi[ka]parxsAda pArxNa BoVgisuvudu pariNAmaparxsAda (cenanxba. savasaM. 3-447-138).}}
+\newmeaning{\ni{upAdhika (soVpAdhika) parxsAda - upAdhikaparxsAdaH; soVpAdhikaparxsAdaH; - upAdhikashacx asw parxsAdashacx-upAdhikaparxsAdaH; upAdhinA saha vataRteV iti soVpAdhikaH soVpAdhikashacx asw parxsAdashacx-soVpAdhikaparxsAdaH}}
 \end{entry}
 
 \begin{entry}
@@ -7091,6 +7108,7 @@ adhAyxtamxshudadhxvideyxV ca sapatx veVdhAMtarAH samxqqtAH ||
 \newmeaning{\ullekha{ayayx, EkaviMshati diVkeSxya nilukaDe, dAvxdashAcAra modalAgi savARcArasaMpatitxnAcaraNeya apiRtAvadhAnavanaridAcari\-sidaDe ninanx savARMgavelalx pAdoVdakaparxsAda maMtarxmaya parabarxhamxsavxrUpu noVDa. (savasaM. 10; gurusi. 742-430); ipapxtotxMdu diVkeSx: EkaviMshati diVkASx ...paDedu pariNAmiseVkaviMshatiya diVkeSxyanu ...biDadeVkAdashaparxsAdavanuMDu EkateyaneyavxnAtamx (keYvasha. 5-1 sUcane).}}
 \smallskip
 \newmeaning{\SEE{I 21 diVkeSxgaLa vivaraNeyanunx AyA shabadxgaLalilx}}
+\newmeaning{\ni{EkaviMshatidiVkASx-(EkaviMshatidiVkeSx) EkaviMshati saMdAyxkA diVkASx-EkaviMshatidiVkASx}}
 \end{entry}
 
 \begin{entry}
