--- a/tex-for-print/151-250.tex
+++ b/tex-for-print/151-250.tex
@@ -1162,7 +1162,8 @@ jAcnxnashakitxdashAMsheVna kataqRsAdAKayxmudaBxvamf |
 \word{katARra}
 \meaning{\arthanonum{(= `kataR')}
 \ullekha{matayxRloVkaveMbudu katARrana kamamxTavayAyx ililx salulxvaru alilxyU salulxvarayAyx ililx salalxdavaru alilxyU salalxru. (savasaM. 1; basava. 155-40); katARrana pUjisi kucita deYvakekxraguvava katetx kudurege huTiTxda veVsaranaMte. (savasaM. 1; basava. 615-154); katARra! ninage karavetitx hoDavaDuva Bakatxra maneya hititxla beVliyAgipepxnayAyx, rAmanAtha. (savasaM. 7; jeVDadA. 746-237); satutx guruvina kAruNayxva koMba shiSayxMge Bakitx visatxrisuvudu, katARra nelegoMba. (savasaM. 8; maDivA. 755-278).}}
-\newmeaning{katARraneV vakAra, keSxVtarxjacnxneV yakAra, shivane OMkAra noVDa. (savasaM. 11; toVMTasi. 201-97).}
+%\newmeaning{katARraneV vakAra, keSxVtarxjacnxneV yakAra, shivane OMkAra noVDa. (savasaM. 11; toVMTasi. %201-97).}
+\newmeaning{\ni{kataR-katARra-kataqR katARra=katAR}}
 \end{entry}
 
 \begin{entry}
@@ -1242,6 +1243,7 @@ careV nUyxnA sevxVSaTxliMgAtf kaniSaThx BakitxrucayxteV |
 \src{kA}
 \meaning{\arthanonum{haThayoVgada oMdu baMdha; mUgina eDa, balaBAgagaLalilxruva iDA matutx piMgaLA eMba nALagaLa \hbox{mUlaka} reVcaka, pUraka eMba usirATada veVgavanunx tiVvarxgoLisuva oMdu karxma:}
 \ullekha{iDApiMgaLadAvxraMgaLalilx ati tiVvarxvAgi reVcakapUrakamaM mALupxde kapAlaBAtiyenisuvudu. (pAramA. 261).}}
+\newmeaning{\ni{kapAlaBAti kapAleVna BAti-kapAlaBAti}}
 \end{entry}
 
 \begin{entry}
@@ -1855,6 +1857,7 @@ shiveV yatf tadidaM porxVkatxM karaNApiRtamAgameV ||
 \pauthor{(si.shi., 17. 2-3, 39)}
 \smallskip
 \newmeaning{\ullekha{kAyAnugarxhasathxla, iMdirxyAnugarxhasathxla, pArxNAnugarxhasathxla, kAyApiRtasathxla, karaNApiRtasathxla, BAvApiRtasathxla, shiSayxsathxla, shushUrxSAsathxla, seVvayxsathxla I oMbatutx shivaliMgasathxlaMgaLu. (savasaM. 14; SaNumxKa. 780-355); muMteyapiRta\-sAvadhAna muKa suKavanoVraMte tapapxde tiLidu noVDeMdu kUtuR sidAdhxMtaveVdAMtavuLidAshirxtaMgorevudeV karaNApiRta\-sathxla. (viVsheYpu. 8-126-28); iMtu shariVradalilxyapiRta\-muKavaneyidxda liMgaparxsAdiyaMtaHkaraNadalilxyapiRtamuKavaneyidxda BeVdaveMtidiRtetxMdoDe muMde karaNApiRta\-sathxlavAdudu. (keYvasha. 115-1 sUtarxM).}}
+\newmeaning{\ni{karaNApiRtasathala(ka)-karaNApiRtasathxlaM(saM) karaNeYH karaNeVSuvA apiRtaM-karaNApiRtaM, karaNApiRtaM iti sathxlaM-karaNApiRtasathxlaM}}
 \end{entry}
 
 \begin{entry}
@@ -4645,6 +4648,7 @@ biMdunAdasamAyukatxM kUTAMgamidamiVritamf |
 \meaning{\arthanonum{moVkaSx, keYvalayx, mukitx, keVvala, sakala, shudadhx eMba Atamxna mUru avasethxgaLalilx oMdu. parxkaqti kAyaRgaLanunx biTuTx ANavadalilx ANavavAgiruva sithxtiyalilxruva Atamx:}
 \ullekha{Atamxnu ...keVvalaM luLitasakalaM shudadhxneMdu mU\char'273\char'304 te\char'273doLaLavaTaTxvasethxyuLALxtanu. (viVsheYpu. 6-94-3).}}
 % deVvaloVka matarxyXloVkaveMba... keVvala sharaNanAgalariya... (savasaM. 1; basava. ????); ele manave... ninanx nijavanariyabalalxDe adeV barxhamxjAcnxna, adeV keVvalamukitx... (savasaM. 2; alalxma. ????); matijAcnxna, shurxtijAcnxna... keVvalajAcnxna, joyxVtijArxcnXna... (savasaM. 3; cenanxba. ????); nirAkAraveV... keVvala paraMjoyxVti jAcnxnAnaMdamaya... (savasaM. 11; toVMTasi. ????); veVdAdi aSATxdashavideyxgaLa... jaMgama keVvala mukitxmUlavu... (savasaM. 6; uriliM. ????).}}
+\newmeaning{\ni{keVvala - 1. keVvalaH;  2. keVvalaM keVvateV iti keVvalaH, keVvalaM}}
 \end{entry}
 
 \begin{entry}
@@ -4661,12 +4665,14 @@ kaSxNAtasxMBayeVdayxsutx sa hi keVvalakuMBakaH ||
 \medskip
 \pauthor{(shi.yoV.parx., 2.22.25)}
 \newmeaning{\arthanonum{\SEE{pArxkaqta pArxNAyAma}}}
+\newmeaning{\ni{keVvalakuMBaka-keVvalakuMBakaM keVvalaM ca tatf kuMBakaM ca-keVvalakuMBakaM}}
 \end{entry}
 
 \begin{entry}
 \word{keVvalajAcnxna}
 \meaning{\arthanonum{savaRjacnxtatxvX: loVkaloVkAMtaragaLa, tirxkAlagaLa, savaR vasutxgaLa samagarx jAcnxna: matijAcnxna, shurxtijAcnxna, KaMDitajAcnxna, joyxVtiniRNaRyajAcnxna matutx keVvalajAcnxna - eMba paMcajAcnxnagaLalilx oMdu.}
 \ullekha{matijAcnxna, shurxtijAcnxna, KaMDajAcnxna, keVvalajAcnxna, joyxVtijAcnxRna, mahAjoyxVtijAcnxRnaveMdiMtu jAcnxna\-vAru teranu. (savasaM. 3; cenanxba. 1445-528); niyatade matijAcnxna vA shurxtijAcnxnavAsharxyavAda KaMDitajAcnxnavA joyxVtiniNaRya lasadfjAcnxnavA keVvala jAcnxnaveMdeMba paMcajAcnxnava a\char'273\char'236dipuRda\char'273\char'304vatutxvoMdaneya shiVla (viVsheYpu. 7-113-56)}}
+\newmeaning{\ni{keVvalajAcnxna-keVvalajAcnxnaM 1. keVvalasayx jAcnxnaM-keVvalajAcnxnaM 2. keVvalaM ca tatf jAcnxnaM ca-keVvalajAcnxnaM}}
 \end{entry}
 
 \begin{entry}
@@ -4675,6 +4681,7 @@ kaSxNAtasxMBayeVdayxsutx sa hi keVvalakuMBakaH ||
 Atamxna ipapxtutxnAlukx bageya avasethxgaLalilx oMdu; parxkaqti\-kAyaRgaLanunx biTuTx, sakalatatatxvXgaLanunxLidu ANavamaladalilx ANavarUpadalilxruva Atamxna sithxti.}
 %\newmeaning{\arthanonum{kaNagxtatxleyalilx EnU kANada kaNiNxna hAge idudxdiVna keVvalAvasethx sakalAvasethxyeMba keVvalAvasethxyeMba I eraDu avasethxguLa.}
 \ullekha{shudadhxtatatxvXvidAyxtatatxvXvanelalxva biTuTx ANavamaladalilx ANavasavxrUpAgi kaNagxtatxleyalilx EnU kANada kaNiNxna hAMge idudxdiVga keVvalAvasethx (savasaM. 4; sidadhxrA. 1005-288); oMdeMbudu keTaTx ThAvu keVvalAvasethx. (savasaM. 13; bAlasaM. 679-299); sakalatatatxvXMgaLaM biTuTx parxkaqtikAyaRMgaLuLidu adiradANavadoLage tAneyANavavAgi pudidu bididxraladeV keVvalAvasethx (viVsheYpu. 6-97-42);}}
+\newmeaning{\ni{keVvalAvasethx-keVvalAvasAthx keVvalasayx avasAthx-keVvalAvasAthx}}
 \end{entry}
 
 \begin{entry}
@@ -5968,6 +5975,7 @@ kuMBajaM parxti diVkASxlakaSxNagurukAruNayxsathxlaM nirUpayati shirxVreVNukaH |
 \pauthor{(shi., tatatxvX. 6.1)}
 \smallskip
 \newmeaning{\ullekha{iMtu saMsArajugupAsxnaMtaraM gurUpadeVshaBAvamuMTAgire savxsavxrUpaBAvamAgutiralf tadathaR gurusamiVpavAsavanesagalade gurukAruNayxsathxlavAdudu (keYvasha. 15-1 sUtarx).}}
+\newmeaning{\ni{1. gurukaruNasathxla 2. gurukAruNayxsathxla gurukaruNasathxlaM gurukAruNayxsathxlaM 1. guroVH karuNA yatarx tA daqshaM sathxlaM-gurukaruNasathxlaM 2. karuNAyAH BAvaH kAruNayxM guroVH kAruNayxM yatarx tatf-sathxlaM-gurukAruNayxsathxlaM}}
 \end{entry}
 %medskip
 %\begin{shl}
@@ -5977,6 +5985,7 @@ kuMBajaM parxti diVkASxlakaSxNagurukAruNayxsathxlaM nirUpayati shirxVreVNukaH |
 %\end{shl}
 %\smallskip
 %\pauthor{(EkoVsha. 9-56)}
+
 
 \begin{entry}
 \word{gurukAruNayxsusathxla}
@@ -10541,7 +10550,7 @@ tavxmahaM padalakASxyXthaRshicxdUrxpaH parameVshavxraH ||
 \medskip
 \pauthor{(liM.dhA.caM., pu. 174-175)}
 \newmeaning{\ullekha{sadamala cidUrxpa odavipapx pArxpaMcamathanakekx maMgaLada saMga\-veraDa miVripapx saMbaMdha ArariMdaM meVle atayxtiSaThx siVmeyanu saMbaMdha holabanArayayxbaMda nisisxVma kapilasidadhx malilxkAjuRnA. (savasaM. 4; sidadhxrA. 1068-308); A jala\-madhayx\-dalilxya AkAshabiMbadalilxrutidaR GaTAkAshadoVpAdiyalilx [a]KaMDitanAgidaR cidUrxpanAda shivananu BAvisuvudayayx shirxV cenanxmalilxkAjuRnadeVvA. (savasaM. 5; akakxma. 394-119); aBeVdayxBeVdaka asAdhayxsAdhaka cinamxya cidUrxpa cidAnaMda iMtapapx divayxshivayoVgi mahAsharaNa parxBudeVvara basavaNaNxna karuNadiMdAnu badukidenayAyx (mishArxpaR. 984-10).}}
-\newmeaning{\ni{}}
+\newmeaning{\ni{cidUrxpaM- 1. citaH rUpaM-cidUrxpaM 2. citaH rUpamiva rUpaM yasayx tatf-cidUrxpaM}}
 \end{entry}
 %%ayayx, EkaviMshatidiVkeSxya nilukaDe... citakxlAparxsAda nijaparxsAda cidUrxpaparxsAdavAgi nelasipaRru noVDa... (savasaM. 10; gurusi. 742-430); anAdisaMsidadhx niraMjana pArxNaliMgiya GanavaneVneMdupamisuvenayAyx!.... cidUrxpasavxrUpavAda pArxNaliMgavanu... (savasaM. 12; deVshikeVM. 538-163)
 
@@ -10549,6 +10558,7 @@ tavxmahaM padalakASxyXthaRshicxdUrxpaH parameVshavxraH ||
 \word{cidUrxpu}
 \meaning{\arthanonum{citf rUpa, aMtaraMgadalilxruva paramAtamxna rUpa. divayxceVtanavuLuLxdu:}
 \ullekha{niraMjana nijacidUrxpu tAnAgi arivu tAneMba mAtigeDeyalilxyado? (savasaM. 3; cenanxba. 1266-440); pAdoVdakaveMbudu paramAtamxna cidUrxpu noVDA. (savasaM. 4; sidadhxrA. 769-217); baTaTxbayalalilx oMdu maqga huTiTxtutx, ada kaMDiheneMdaDe kANabAradu, heVLiheneMdaDe heVLabAradu, adu cidUrxpu, cinamxyavu. (savasaM. 5; haDaliM. 1241-377); sadUrxpu liMga, cidUrxpu Bakatx, AnaMdasavxrUpaveV jaMgama noVDA. (savasaM. 11; toVMTasi. 636-283); citutx citAtxgalike citutx cidUrxpAyitu (kaDasavx. 3-62-3); cidabxrXhAmxMDa, cidUrxpa, citasxvXrUpu, ceYtanayx savxrUpu eMdu heVLisikoLuLxva elalxvU I mUlacitutx\-viniMda kUDikoMDive (shivAkoV. 16-19).}}
+\newmeaning{\ni{cidUrxpaM- 1. citaH rUpaM-cidUrxpaM 2. citaH rUpamiva rUpaM yasayx tatf-cidUrxpaM}}
 \end{entry}
 
 \begin{entry}
@@ -11170,7 +11180,7 @@ savxyaM caraM paraM ceVti terxYvidhayxM samupAgatamf ||
 \begin{entry}
 \word{jaMgamadorxVhi}
 \meaning{\arthanonum{caraliMga enisiruva jaMgamananunx vaMcisuvavanu; jaMgamanalilx vishAvxsavilalxdavanu:}
-\ullekha{parxsAdadalilx eMjala sUtakava BAvisuvAtane jaMgamadorxVhi. (savasaM. 3; cenanxba. 926-290); muMde jaMgamavipupxdAgi jaMgamadorxVhiyAdavana muKava noVDalAgadu, matetx noVDabahudu Eke muMde parxsAdavipupxdAgi (savasaM. 3; cenanxba. 1162-399);  jaMgama jaMgamaveMdu pUjeya mADuvaru, A jaMgamava jagada haMgigareMbaru, avaru jaMgamadorxVhigaLu. (savasaM. 9; haDapa. 935-287); hasiviniceCxge shuciyashuciyenanxde Bavi Bakatxnenanxde kaMDa kaMDa janara koMDADi udara horevaru jaMgamadorxVhigaLu. (savasaM. 12; deVshikeVM. 331-101); manege baMdalalxmana dahisalekx ninanx paNegaNedx\char'273\char311da jaMgamadorxVhi niVnu (cebapu. 92-57).}}
+\ullekha{parxsAdadalilx eMjala sUtakava BAvisuvAtane jaMgamadorxVhi. (savasaM. 3; cenanxba. 926-290); muMde jaMgamavipupxdAgi jaMgamadorxVhiyAdavana muKava noVDalAgadu, matetx noVDabahudu Eke muMde parxsAdavipupxdAgi (savasaM. 3; cenanxba. 1162-399);  jaMgama jaMgamaveMdu pUjeya mADuvaru, A jaMgamava jagada haMgigareMbaru, avaru jaMgamadorxVhigaLu. (savasaM. 9; haDapa. 935-287); hasiviniceCxge shuciyashuciyenanxde Bavi Bakatxnenanxde kaMDa kaMDa janara koMDADi udara horevaru jaMgamadorxVhigaLu. (savasaM. 12; deVshikeVM. 331-101); manege baMdalalxmana dahisalekx ninanx paNegaNedx\char'273\char'311da jaMgamadorxVhi niVnu (cebapu. 92-57).}}
 \newmeaning{\ni{jaMgamadorxVhiV, jaMgamasayx dorxVhaH asimxnf asitx iti-jaMgamadorxVhiV}}
 \end{entry}
 %guru toVridanu liMga-jaMgamada... jaMgamadorxVhigaLAda heVLidane?... (savasaM. 4; sidadhxrA. 494-139);
