--- a/tex-for-print/251-281.tex
+++ b/tex-for-print/251-281.tex
@@ -175,6 +175,7 @@ savaRM cidUrxpavijAcnxnAtf jaMgamAdhikayxmucayxteV ||
 \medskip
 \pauthor{(si.shi., 11. 4. 35)}
 \newmeaning{\ullekha{iMtu manasiriVkaqta jaMgamamahAtamxyXvaMtanAda parxsAdiyu jAcnxnAMtarAvasithxta jaMgamamahAtamxyXveMtidiRtetxMdoDe muMde jaMgamamahAtamxyX sathxlavAdudu (keYvasha. 46-1 sUtarx).}}
+\newmeaning{\ni{jaMgamamahAtamxyXsathxla, jaMgamamahAtemxyXsathxla, jaMgamamAhAtamxyXsathxlaM=jaMgamamAhAtamxyXsathxlaM jaMgamasayx mAhAtamxyXM-jaMgamamAhAtamxyXM jaMgamasayx mAhAtamxyXM iti sathxlaM-jaMgamamAhAtamxyXsathxlaM}}
 \end{entry}
 
 \begin{entry}
@@ -278,6 +279,7 @@ duSapxrXBAvadiMda mukatxnAgutAtxne. (va.pa.koV. 162)}}
 \src{kA}
 \meaning{\arthanonum{savxy, cara matutx para eMba jaMgamana mUru avasethxgaLu.}
 \ullekha{jaMgamaliMgatirxvidha savxya cara para (savasaM. 3; cenanxba. 839-246); savxyaliMga caraliMga para\-liMgaveMdu jaMgama\-liMgatirxvidhavu (viveVka. 112); jaMgama\-liMgatirxvidha - ivu savxya, cara, para eMdu ive. kirxyegaLa pariNAma\-gaLu tananxlilx nishacxlavAgi uLidare savxyavu, adu BakitxkAraNa\-vAgi jagatitxnalilx janahitakokxVsakxra upayoVgisalapxTaTxlilx caravu. hiVge vayxvaharisi cidAtamxnalilx beredalilx adu paravu. idu jaMgamada utakxqSaTxsithxtiyu (shivAkoV. 62-103).}}
+\newmeaning{\ni{jaMgamaliMgatirxvidha-jaMgamaliMgatirxvidhaM jaMgamaliMgaMca tatf tirxvidhaM ca-jaMgamaliMgatirxvidhaM}}
 \end{entry}
 
 \begin{entry}
