1-273 pages are sent to 7th proof

--- a/tex-for-print/jss-001-281.tex
+++ b/tex-for-print/jss-001-281.tex
@@ -399,7 +399,7 @@ aMgaliMgisathxlaM cAtha karxmAdeVSAM BidoVcayxteV ||...\\
 \pauthor{(si.shi., 12. 4-5, 42)}
 \smallskip
 \newmeaning{\ni{aMgaliMgisathxlaM - aMgasathxlasaMbaMdi yatf liMgisathxlaM tatf aMgaliMgisathxlaM}}
-\newmeaning{\arthanonum{(\SEE aMgaliMgasathxla)}}
+\newmeaning{\arthanonum{\SEE{aMgaliMgasathxla}}}
 \end{entry}
 
 \medskip
@@ -635,7 +635,7 @@ aMgaliMga {nisasxMgavA\char'273\char'301\char'273} BeVdisi pArxNaliMgadAdiparxBe
 \begin{entry}
 \word{aMgasathxlAsharxyAshakitx}
 \src{saM}
-\meaning{\arthanonum{shakitxya BeVda, BakitxrUpada idu Bavavanunx nAshapaDisuvaMtahadudx, vAsanArahitavAdadudx, shudadhx, sUkaSxmX, shoVBana, sacicxdAnaMdarUpadudx matutx Bukitxbreakmukitx Palavanunx niVDuvaMtahadudx. liMgAshirxta shakitxgU (liMgasathxlAsharxyavAda shakitxgU) idakUkx BeVdavilalx. nivaqtitxrUpada idariMda jagatitxna parxLaya. UdhavxRmuKiyAda idu nimARyaBakitx eniside. I shakitxya viSayadalilxna BakitxyiMda upAsakana upAsakatavxvu GaTisutatxde.}}
+\meaning{\arthanonum{shakitxya BeVda, BakitxrUpada idu Bavavanunx nAshapaDisuvaMtahadudx, vAsanArahitavAdadudx, shudadhx, sUkaSxmX, shoVBana, sacicxdAnaMdarUpadudx matutx Bukitx mukitx Palavanunx niVDuvaMtahadudx. liMgAshirxta shakitxgU (liMgasathxlAsharxyavAda shakitxgU) idakUkx BeVdavilalx. nivaqtitxrUpada idariMda jagatitxna parxLaya. UdhavxRmuKiyAda idu nimARyaBakitx eniside. I shakitxya viSayadalilxna BakitxyiMda upAsakana upAsakatavxvu GaTisutatxde.}}
 \medskip
 \begin{shl}
 aMgasathxlAsharxyAshakitxBaRkitxrUpA BavApahA |\\[2pt]
