--- a/macros.tex
+++ b/macros.tex
@@ -2,11 +2,13 @@
 \usepackage[papersize={215mm,280mm},
 topmargin=20mm,botmargin=20mm,leftmargin=20mm,rightmargin=20mm,
 headheight=5mm,headsep=5mm,footskip=6mm,cropmarks,nopagenumbers]{zwpagelayout}
+\usepackage{hyphenat}
+%\def\-{-\penalty0\hskip0pt\relax}
 
 \usepackage{textpos}
 
 \tolerance=4000
-\defaulthyphenchar=32
+%\defaulthyphenchar=32
 
 %~ \makeatletter
 %~ \def\@makechapterhead#1{%
@@ -72,7 +74,7 @@ headheight=5mm,headsep=5mm,footskip=6mm,cropmarks,nopagenumbers]{zwpagelayout}
 \long\def\explnum#1{\stepcounter{expnum}\theexpnum. #1}
 \long\def\mng#1{\setcounter{expnum}{0}#1}
 \long\def\imng{\indent}
-\def\SEE#1{\hfill(parA. #1)\par}
+\def\SEE#1{\hfill parA. #1\par}
 
 \def\src#1{{\bf (#1).}}
 
